--- a/bootstrap/news.html
+++ b/bootstrap/news.html
@@ -25,7 +25,7 @@
             <a class="nav-link active" aria-current="page" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#group">Group</a>
+            <a class="nav-link" href="stray.html">Group</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -33,7 +33,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#music">Music</a></li>
-              <li><a class="dropdown-item" href="news.html">News</a></li>
+              <li><a class="dropdown-item" href="#news">News</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#contact">Contact us</a></li>
             </ul>
@@ -49,248 +49,101 @@
       </div>
     </div>
   </nav>
-  <section id="group">
-    <h1>Stray kids</h1>
-    <div class="accordion accordion-flush m-5 mt-0" id="accordionFlushExample">
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-            Bang Chan
-          </button>
-        </h2>
-        <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/bangchan.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Bahng Cristofer Chahn</h3>
-              <p>Trained for 7 years; friends with a lot of idols; he also likes to DJ; “if Stay are happy then Channie is happy too”</p>
+  <h1>NEWS</h1>
+  <section id="neew" class=" d-flex justify-content-center flex-wrap">
+  
+  <div class="card text-bg-dark m-2">
+    <img src="img/group3.jpg" class="card-img " alt="...">
+    <div class="card-img-overlay d-flex flex-column justify-content-end">
+      <h5 class="card-title">SBS</h5>
+      <p class="card-text">8 Santa Kids who came again this year. Stray Kids stole the spotlight with a breathtaking performance on SBS. The K-pop group's dynamic choreography and powerful vocals captivated fans, showcasing their exceptional talent.</p>
+      <p class="card-text"><small>Last updated 3 mins ago</small></p>
+    </div>
+  </div>
+  <div class="card text-bg-dark m-2">
+    <img src="img/group1.jpg" class="card-img" alt="...">
+    <div class="card-img-overlay d-flex flex-column justify-content-end">
+      <h5 class="card-title">2023MBC</h5>
+      <p class="card-text">Thank you Stay for helping us end a perfect 2023. <br>Stray Kids continued their reign in K-pop with a stellar performance at the 2023 MBC event. The group showcased their signature dynamic choreography and impressive vocals, leaving fans in awe. </p>
+      <p class="card-text"><small>Last updated 16 mins ago</small></p>
+    </div>
+  </div>
+  
+</section>
+<section id="neww">
+    <div class="card mb-3 m-2" >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="img/group7.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Show Music Core</h5>
+              <p class="card-text">Stray Kids celebrated a historic moment with their first victory on Show Music Core. The group's electrifying performance, coupled with their dedicated fanbase, secured them the well-deserved win.This victory marked a significant achievement for the group, highlighting their talent, hard work, and growing influence in the K-pop scene.The atmosphere was charged with excitement as Stray Kids expressed gratitude for the support that propelled them to this milestone. As Stray Kids continues to make waves, their first win on Show Music Core will undoubtedly be remembered as a pivotal moment in their musical journey.</p>
+              <p class="card-text"><small class="text-body-secondary">Last updated 40 mins ago</small></p>
             </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-            Changbin
-          </button>
-        </h2>
-        <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/changbin.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Seo Changbin</h3>
-              <p>Was part of a dance team in high school, now one of the main rappers; always working out; actually the one with the most aegyo</p>
+      <div class="card mb-3 m-2" >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="img/group8.jpg" class="img-fluid rounded-start" alt="...">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">2024 Season's Greetings</h5>
+              <p class="card-text">Perfect Day with SKZ. <br> Stray Kids welcomes the new year with their enchanting 2024 Season's Greetings, aptly titled "Perfect Day with SKZ." The package promises a delightful journey into the world of Stray Kids, offering fans an immersive experience filled with joy and excitement.
+
+                The Season's Greetings captures the essence of a perfect day with Stray Kids through a vibrant blend of exclusive content. Fans can expect a beautifully designed calendar featuring the members, each month adorned with stunning visuals that showcase the group's diverse charms.
+                
+                The package also includes behind-the-scenes footage, giving fans a sneak peek into the daily lives of Stray Kids. From candid moments to playful interactions, "Perfect Day with SKZ" offers an intimate look at the personalities that make up this dynamic group.</p>
+              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
             </div>
           </div>
         </div>
       </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-            Lee Know
-          </button>
-        </h2>
-        <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/leeknow.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Lee Minho</h3>
-              <p>Has 3 cats, and absolutely adores cats; ambidextrous; shortest trainee period; likes boxing</p>
-            </div>        
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
-            Han
-          </button>
-        </h2>
-        <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/han.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Han Jisung</h3>
-              <p>Likes ghibli movies, watches nature documentaries on youtube, lived in Malaysia for several years, loves cheesecake</p>
-            </div>        
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseFive">
-            Felix
-          </button>
-        </h2>
-        <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/felix.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Lee Yongbok/Felix Lee</h3>
-              <p>Loves baking; very cuddly; likes video games; freckles</p>
-            </div>        
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-            Seungmin
-          </button>
-        </h2>
-        <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/seungmin.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Kim Seungmin</h3>
-              <p>His english name is Sky; most diligent; biggest Day6 fan; loves mint chocolate and Korean food; wanted to become a baseball player when he was younger</p>
-            </div>        
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseSeven">
-            Hyunjin
-          </button>
-        </h2>
-        <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/hyunjin.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Hwang Hyunjin</h3>
-              <p>He’s been an MC for Music Core for two years now, hates eggplants, is learning producing currently, loves among us</p>
-            </div>        
-          </div>
-        </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseEight">
-            I.N
-          </button>
-        </h2>
-        <div id="flush-collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-          <div class="accordion-body d-flex justify-content-start flex-wrap align-items-center">
-            <div class="image">
-              <img class="w-30" src="img/in.png" alt="">
-            </div>
-            <div class="text">
-              <h3>Yang Jeongin</h3>
-              <p>Loves trot; works out a lot actually; truly the definition of Maknae on Top, always smiling</p>
-            </div>        
-          </div>
+</section>
+<section  id="nee">
+<div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card m-2">
+        <img src="img/group2.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">SKZ-BEHIND</h5>
+          <p class="card-text">Happy New Year in advance STAY. <br> Stray Kids spreads early New Year cheer to their devoted fanbase, STAY, through their exclusive content series, "SKZ-BEHIND." As a token of appreciation for the unwavering support, the group extends warm wishes for the upcoming year.</p>
         </div>
       </div>
     </div>
-  </section>
-  <section id="portfolio" class="portfolio">
-    <div class="container" data-aos="fade-up">
-
-      <div class="section-title text-center">
-        <h2>Group</h2>
-        <p>Stray kids everywhere all around the world</p>
-      </div>
-      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group1.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>2023MBC</h4>
-              <p>Thank you Stay for helping us end a perfect 2023</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group2.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>SKZ-BEHIND</h4>
-              <p>Happy New Year in advance STAY</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group3.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>SBS</h4>
-              <p>8 Santa Kids who came again this year</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group4.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>2023 Music Bank Global Festival</h4>
-              <p>Thank you for being with SKZ once again until late at night</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group5.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>SOHU KOREA</h4>
-              <p>3rd meeting between SKZ and the fox doll</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group6.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>2023 Asia Artist Awards</h4>
-              <p>The end of the year kids started with a huge round of applause</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group7.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>Show Music Core</h4>
-              <p>Hyeonpo is the number one song on Skz's music chart.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group8.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>2024 Season's Greetings</h4>
-              <p>Perfect Day with SKZ</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-md-6 portfolio-item">
-          <div class="portfolio-wrap">
-            <img src="img/group9.jpg" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>BBMAs</h4>
-              <p>Mindblowing that we just won Top K-Pop Album</p>
-            </div>
-          </div>
+    <div class="col">
+      <div class="card m-2">
+        <img src="img/group4.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2023 Music Bank Global Festival</h5>
+          <p class="card-text">Thank you for being with SKZ once again until late at night. <br> The 2023 Music Bank Global Festival served as a platform for Stray Kids to showcase their musical prowess on an international stage. The group's global popularity was evident as fans from various countries came together to support and cheer for them.</p>
         </div>
       </div>
-
     </div>
-  </section>
+    <div class="col">
+      <div class="card m-2">
+        <img src="img/group5.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">SOHU KOREA</h5>
+          <p class="card-text">3rd meeting between SKZ and the fox doll.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card m-2">
+        <img src="img/group6.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2023 Asia Artist Awards</h5>
+          <p class="card-text">The end of the year kids started with a huge round of applause. <br> 2023 Asia Artist Awards
+            The end of the year kids started with a huge round of applause.</p>
+        </div>
+      </div>
+    </div>
+  </div></section>
   <footer>
     <div class="footer-top">
       <div class="container">
