--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -33,7 +33,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#music">Music</a></li>
-              <li><a class="dropdown-item" href="#news">News</a></li>
+              <li><a class="dropdown-item" href="news.html">News</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#contact">Contact us</a></li>
             </ul>
