--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -213,16 +213,16 @@
 <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/bbmas.jpg" class="d-block w-100" alt="...">
+      <img src="img/group1.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/show1.jpg" class="d-block w-100" alt="...">
+      <img src="img/group2.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/bbmas1.jpg" class="d-block w-100" alt="...">
+      <img src="img/group3.jpg" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/show2.jpg" class="d-block w-100" alt="...">
+      <img src="img/group4.jpg" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
