--- a/bootstrap/news.html
+++ b/bootstrap/news.html
@@ -50,7 +50,7 @@
     </div>
   </nav>
   <h1>NEWS</h1>
-  <section id="neew" class=" d-flex justify-content-center flex-wrap">
+  <section id="neew" class=" d-flex justify-content-center">
   
   <div class="card text-bg-dark m-2">
     <img src="img/group3.jpg" class="card-img " alt="...">
