--- a/bootstrap/music.html
+++ b/bootstrap/music.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>News - Stayville</title>
+  <title>Music - Stayville</title>
   <link rel="icon" type="image/png" href="img/music.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html">Stayville</a>
+      <a class="navbar-brand" href="#">Stayville</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -32,8 +32,8 @@
               More
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="music.html">Music</a></li>
-              <li><a class="dropdown-item" href="#news">News</a></li>
+              <li><a class="dropdown-item" href="#music">Music</a></li>
+              <li><a class="dropdown-item" href="news.html">News</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#contact">Contact us</a></li>
             </ul>
@@ -49,101 +49,183 @@
       </div>
     </div>
   </nav>
-  <h1>NEWS</h1>
-  <section id="neew" class=" d-flex justify-content-center">
-  
-  <div class="card text-bg-dark m-2">
-    <img src="img/group3.jpg" class="card-img " alt="...">
-    <div class="card-img-overlay d-flex flex-column justify-content-end">
-      <h5 class="card-title">SBS</h5>
-      <p class="card-text">8 Santa Kids who came again this year. Stray Kids stole the spotlight with a breathtaking performance on SBS. The K-pop group's dynamic choreography and powerful vocals captivated fans, showcasing their exceptional talent.</p>
-      <p class="card-text"><small>Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card text-bg-dark m-2">
-    <img src="img/group1.jpg" class="card-img" alt="...">
-    <div class="card-img-overlay d-flex flex-column justify-content-end">
-      <h5 class="card-title">2023MBC</h5>
-      <p class="card-text">Thank you Stay for helping us end a perfect 2023. <br>Stray Kids continued their reign in K-pop with a stellar performance at the 2023 MBC event. The group showcased their signature dynamic choreography and impressive vocals, leaving fans in awe. </p>
-      <p class="card-text"><small>Last updated 16 mins ago</small></p>
-    </div>
-  </div>
-  
-</section>
-<section id="neww">
-    <div class="card mb-3 m-2" >
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="img/group7.jpg" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Show Music Core</h5>
-              <p class="card-text">Stray Kids celebrated a historic moment with their first victory on Show Music Core. The group's electrifying performance, coupled with their dedicated fanbase, secured them the well-deserved win.This victory marked a significant achievement for the group, highlighting their talent, hard work, and growing influence in the K-pop scene.The atmosphere was charged with excitement as Stray Kids expressed gratitude for the support that propelled them to this milestone. As Stray Kids continues to make waves, their first win on Show Music Core will undoubtedly be remembered as a pivotal moment in their musical journey.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 40 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card mb-3 m-2" >
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="img/group8.jpg" class="img-fluid rounded-start" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">2024 Season's Greetings</h5>
-              <p class="card-text">Perfect Day with SKZ. <br> Stray Kids welcomes the new year with their enchanting 2024 Season's Greetings, aptly titled "Perfect Day with SKZ." The package promises a delightful journey into the world of Stray Kids, offering fans an immersive experience filled with joy and excitement.
-
-                The Season's Greetings captures the essence of a perfect day with Stray Kids through a vibrant blend of exclusive content. Fans can expect a beautifully designed calendar featuring the members, each month adorned with stunning visuals that showcase the group's diverse charms.
-                
-                The package also includes behind-the-scenes footage, giving fans a sneak peek into the daily lives of Stray Kids. From candid moments to playful interactions, "Perfect Day with SKZ" offers an intimate look at the personalities that make up this dynamic group.</p>
-              <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-            </div>
-          </div>
-        </div>
-      </div>
-</section>
-<section  id="nee">
-<div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-      <div class="card m-2">
-        <img src="img/group2.jpg" class="card-img-top" alt="...">
+  <h1 class="text-center">MUSIC</h1>
+  <section id="musica" class="m-5 d-flex flex-wrap">
+    
+    <div class="card m-2" style="width: 21rem;">
+        <img src="img/rockstar.jfif" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">SKZ-BEHIND</h5>
-          <p class="card-text">Happy New Year in advance STAY. <br> Stray Kids spreads early New Year cheer to their devoted fanbase, STAY, through their exclusive content series, "SKZ-BEHIND." As a token of appreciation for the unwavering support, the group extends warm wishes for the upcoming year.</p>
+          <h5 class="card-title">ROCK-STAR</h5>
+          <p class="card-text">
+            album - 2023 - 8 tracks <br>
+            1. MEGAVERSE <br>
+            2. LALALALA <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/0aJnGEZWIc1VCYlZOXv05a" class="btn btn-primary">listen on spotify</a>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card m-2">
-        <img src="img/group4.jpg" class="card-img-top" alt="...">
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/allmylife.jfif" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">2023 Music Bank Global Festival</h5>
-          <p class="card-text">Thank you for being with SKZ once again until late at night. <br> The 2023 Music Bank Global Festival served as a platform for Stray Kids to showcase their musical prowess on an international stage. The group's global popularity was evident as fans from various countries came together to support and cheer for them.</p>
+          <h5 class="card-title">All My Life
+            (feat. Burna Boy)</h5>
+          <p class="card-text">
+            single - 2023 - 3 tracks <br>
+            1. All My Life (Burna Boy Remix) <br>
+            2. All My Life (Stray Kids Remix) <br>
+            3. All My Life (feat. J. Cole)</p>
+          <a href="https://open.spotify.com/album/11OlFW8YpwZTlhAdc0NCV7" class="btn btn-primary">listen on spotify</a>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card m-2">
-        <img src="img/group5.jpg" class="card-img-top" alt="...">
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/socialpath.jfif" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">SOHU KOREA</h5>
-          <p class="card-text">3rd meeting between SKZ and the fox doll.</p>
+          <h5 class="card-title">Social Path</h5>
+          <p class="card-text">
+            album - 2023 - 5 tracks <br>
+            1. Social Path(feat. LiSA) <br>
+            2. Super Bowl -Japanese ver.- <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/7xBMOCdTrdP3Y7rDBHp2AW" class="btn btn-primary">listen on spotify</a>
         </div>
       </div>
-    </div>
-    <div class="col">
-      <div class="card m-2">
-        <img src="img/group6.jpg" class="card-img-top" alt="...">
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/5-star.jfif" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">2023 Asia Artist Awards</h5>
-          <p class="card-text">The end of the year kids started with a huge round of applause. <br> 2023 Asia Artist Awards
-            The end of the year kids started with a huge round of applause.</p>
+          <h5 class="card-title">5-STAR</h5>
+          <p class="card-text">
+            album - 2023 - 12 tracks <br>
+            1. Hall of Fame <br>
+            2. S-Class <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/3Pel3gWsPxVpZVrciU0Fm6" class="btn btn-primary">listen on spotify</a>
         </div>
       </div>
-    </div>
-  </div></section>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/thesound.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">THE SOUND</h5>
+          <p class="card-text">
+            album - 2023 - 10 tracks <br>
+            1. THE SOUND <br>
+            2. Battle Ground <br>
+            3. Lost Me <br>
+            4. DLMLU <br>
+            5. Novel <br>
+            6. CASE 143 -Japanese ver.- <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/4ZW5rXkLINHYqH2MIAhkP2" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/skz-replay.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">SKZ-REPLAY</h5>
+          <p class="card-text">
+            album - 2022 - 25 tracks <br>
+            1. FAM (Korean Ver.) <br>
+            2. Connected (Bang Chan) <br>
+            3. Limbo (Lee Know) <br>
+            4. DOODLE (Changbin) <br>
+            5. Love Untold (Hyunjin) <br>
+            6. RUN (HAN) <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/3UXrliH0JUQvcaLnBD8Txz" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/maxident.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">MAXIDENT</h5>
+          <p class="card-text">
+            album - 2022 - 8 tracks <br>
+            1. CASE 143 <br>
+            2. CHILL <br>
+            3. Give Me Your TMI <br>
+            4. SUPER BOARD <br>
+            5. 3RACHA (Bang Chan, Changbin, HAN) <br>
+            6. TASTE (Lee Know, Hyunjin, Felix) <br>
+            ....</p>
+          <a href="https://open.spotify.com/album/0T6hYH0UyDjNraWZk2mZWi" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/oddinary.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">ODDINARY</h5>
+          <p class="card-text">
+            album - 2022 - 7 tracks <br>
+            1. VENOM <br>
+            2. MANIAC <br>
+            3. Charmer <br>
+            4. FREEZE <br>
+            5. Lonely St. <br>
+            6. Waiting For Us <br>
+            7. Muddy Water </p>
+          <a href="https://open.spotify.com/album/0Gmf4pfe0POEQq2FgGAj2q" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/circus.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">CIRCUS</h5>
+          <p class="card-text">
+            album - 2022 - 6 tracks <br>
+            1. CIRCUS <br>
+            2. Fairytale <br>
+            3. 蜘蛛の糸 (VENOM) -Japanese ver.- <br>
+            4. MANIAC -Japanese ver.- <br>
+            5. Silent Cry -Japanese ver.- <br>
+            6. Your Eyes</p>
+          <a href="https://open.spotify.com/album/5lBLKPJtpcRwd0tJFIMw8A" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/allin.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">ALL IN</h5>
+          <p class="card-text">
+            album - 2020 - 7 tracks <br>
+            1. ALL IN <br>
+            2. FAM <br>
+            3. One Day <br>
+            4. 神メニュー -Japanese ver.- <br>
+            5. Back Door -Japanese ver.- <br>
+            .... </p>
+          <a href="https://open.spotify.com/album/06EHg8PHtDhbZMpE0jmhEn" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/noeasy.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">NOESY</h5>
+          <p class="card-text">
+            album - 2021 - 14 tracks <br>
+            1. CHEESE <br>
+            2. Thunderous <br>
+            3. DOMINO <br>
+            4. SSICK <br>
+            5. The View <br>
+            .... </p>
+          <a href="https://open.spotify.com/album/558tpdCejjVQNFAumRAeQj" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+      <div class="card m-2" style="width: 21rem;">
+        <img src="img/golive.jfif" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">GO LIVE</h5>
+          <p class="card-text">
+            album - 2020 - 14 tracks <br>
+            1. GO LIVE <br>
+            2. God’s Menu <br>
+            3. Easy <br>
+            4. Pacemaker <br>
+            5. Airplane <br>
+            .... </p>
+          <a href="https://open.spotify.com/album/6DWLIzvmiLPAuDWYZqrLQo" class="btn btn-primary">listen on spotify</a>
+        </div>
+      </div>
+  </section>
   <footer>
     <div class="footer-top">
       <div class="container">
