--- a/bootstrap/stray.html
+++ b/bootstrap/stray.html
@@ -32,7 +32,7 @@
               More
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#music">Music</a></li>
+              <li><a class="dropdown-item" href="music.html">Music</a></li>
               <li><a class="dropdown-item" href="news.html">News</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#contact">Contact us</a></li>
