--- a/bootstrap/music.html
+++ b/bootstrap/music.html
@@ -15,7 +15,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Stayville</a>
+      <a class="navbar-brand" href="index.html">Stayville</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,7 +50,7 @@
     </div>
   </nav>
   <h1 class="text-center">MUSIC</h1>
-  <section id="musica" class="m-5 d-flex flex-wrap">
+  <section id="musica" class="m-5 d-flex flex-wrap justify-content-center">
     
     <div class="card m-2" style="width: 21rem;">
         <img src="img/rockstar.jfif" class="card-img-top" alt="...">
